[project]
name = "soundcast_landuse_scenario_builder"
version = "0.0.1"
description = "A Python package for building and managing Soundcast Land Use Scenarios"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ortools>=5.1.4045",
    "pyinstrument>=5.0.1",
    "pyyaml>=6.0.2",
    "psutil>=7.0.0",
    "pandas>=2.2",
    "numpy>=1.16.1,<2",
    "tables>=3.9",
    "orca>=1.8",
    "blosc2>=2.5.1",
    "cvxpy[glpk]>=1.6.5",
    "numba>=0.60.0",
    "pyarrow>=20.0.0",
    "geopandas>=1.0.1",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.44",
    "networkx>=3.2.1",
    "h5py>=3.14.0",
    "pydantic>=2.12.3",
]

[project.scripts]
soundcast_landuse_scenario_builder = "soundcast_landuse_scenario_builder.cli.main:main"

